# adamx

./: README.md  agent-document-schema.json
experiment1/: Cargo.toml  README.md  mad-spec.md  test.html
experiment1/examples/: create_document.js
experiment1/src/: builder.rs  graph_db.rs  lib.rs  mcp_server.rs  sharing.rs
experiment1/test/NFSTandC_mad/: content.json  create_mad_document.js  document.json  manifest.json
experiment1/tools/: example_usage.py  install_deps.sh  pdf_to_mad.py  requirements.txt
experiment2/: .dockerignore  DOCKER.md  Dockerfile  NFSTandC-noembeds.wasm  NFSTandC.adam-mcp.wasm  NFSTandC.adam.wasm  README.md  VISION.md  docker-compose.yml  package-lock.json  package.json
experiment2/hack/: README.md  adam-document-viewer.html  mcp-http-bridge.js  mcp-test-harness.html  mock-mcp-server.js  package.json  serve-test-harness.js  simple-test.html
experiment2/src/: cli.js  pipeline.js
experiment2/src/embeddings/: EmbeddingGenerator.js
experiment2/src/extractors/: SectionExtractor.js
experiment2/src/formatters/: OutputFormatter.js
experiment2/src/metadata/: MetadataExtractor.js
experiment2/src/parsers/: DocumentParser.js
experiment2/src/relationships/: RelationshipDetector.js
experiment2/src/utils/: logger.js  validator.js
experiment2/src/wasm/: adam-mcp-packer.js  adam-mcp-server.js  adam-packer.js  browser-mcp-bridge.js  simple-packer.js
experiment2/src/web/: server.js
